--- a/department-service.properties
+++ b/department-service.properties
@@ -1,5 +1,5 @@
 #spring.application.name=DEPARTMENT-SERVICE
-spring.datasource.uri=jdbc:mysql://localhost:3306/department_db
+spring.datasource.url=jdbc:mysql://localhost:3306/department_db
 spring.datasource.username=root
 spring.datasource.password=Jitendra@500
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
