--- a/department-service.properties
+++ b/department-service.properties
@@ -6,4 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-spring.boot.message=Hello , Department Service updated
+spring.boot.message=Hello , Department Service 
